asjust sornaqube